applications/arcadians/0.1.0/api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arcadians-api
  namespace: retro-game
  labels:
    app.kubernetes.io/instance: arcadians
    app.kubernetes.io/component: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: arcadians
      app.kubernetes.io/component: api
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: arcadians
        app.kubernetes.io/component: api
    spec:
      containers:
        - name: api
          image: ghcr.io/markround/arcadians-api:nkp
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: arcadians-api
  namespace: retro-game
  labels:
    app.kubernetes.io/instance: arcadians
    app.kubernetes.io/component: api
spec:
  selector:
    app.kubernetes.io/instance: arcadians
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 8000
      targetPort: 8000
