applications/arcadians/0.1.0/frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arcadians-game
  namespace: retro-game
  labels:
    app.kubernetes.io/instance: arcadians
    app.kubernetes.io/component: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: arcadians
      app.kubernetes.io/component: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: arcadians
        app.kubernetes.io/component: frontend
    spec:
      containers:
        - name: game
          image: ghcr.io/markround/arcadians-game:nkp
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              memory: "32Mi"
              cpu: "25m"
            limits:
              memory: "64Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: arcadians-game
  namespace: retro-game
  labels:
    app.kubernetes.io/instance: arcadians
    app.kubernetes.io/component: frontend
spec:
  selector:
    app.kubernetes.io/instance: arcadians
    app.kubernetes.io/component: frontend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
# # OpenShift Route
# apiVersion: route.openshift.io/v1
# kind: Route
# metadata:
#   name: arcadians
#   namespace: retro-game
#   labels:
#     app.kubernetes.io/instance: arcadians
# spec:
#   to:
#     kind: Service
#     name: arcadians-game
#   port:
#     targetPort: http
#   tls:
#     termination: edge
#     insecureEdgeTerminationPolicy: Redirect
